<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/num_fac"
            />

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/d"
            />

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            />

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/concepto"
            />

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>