<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BBDD"
    android:padding="20dp">

    <Button
        android:id="@+id/btCrearC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_cliente"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="crearCliente"
        />

    <Button
        android:id="@+id/btModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar_cliente"
        app:layout_constraintTop_toBottomOf="@id/btCrearC"
        android:onClick="modificarCliente"
        />

    <Button
        android:id="@+id/btCrearF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_facturas"
        app:layout_constraintTop_toBottomOf="@id/btModificar"
        android:onClick="crearFactura"
        />

    <Button
        android:id="@+id/btConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultar_facturas"
        app:layout_constraintTop_toBottomOf="@id/btCrearF"
        android:onClick="consultarFacturas"
        />

</androidx.constraintlayout.widget.ConstraintLayout>