<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestorXML">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/el_tiempo"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtEscoge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Escoge una de las siguientes localidades"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btBilbo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilbo"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtEscoge"
        android:onClick="cargarBilbo"
        />

    <Button
        android:id="@+id/btVitoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vitoria"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btBilbo"
        android:onClick="cargarVitoria"
        />
    <Button
        android:id="@+id/btDonosti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="donostia-san sebastian"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btVitoria"
        android:onClick="cargarDonosti"
        />

    <TextView
        android:id="@+id/txtEn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo_en"
        app:layout_constraintTop_toBottomOf="@id/btDonosti"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_hora"
        app:layout_constraintTop_toBottomOf="@id/txtEn"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/txtTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperatura"
        app:layout_constraintTop_toBottomOf="@id/txtFecha"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <!--Aqui deberia de ir la imagen ups-->

    <TextView
        android:id="@+id/txtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtTemperatura"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/salir"
        android:onClick="salir"
        />


</androidx.constraintlayout.widget.ConstraintLayout>