<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".BaseDeDatos.CrearCliente">

    <TextView
        android:id="@+id/txtCreando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/creando_cliente"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/txtDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dni"
        app:layout_constraintTop_toBottomOf="@id/txtCreando"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edtDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtDni"
        />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintTop_toBottomOf="@id/edtDni"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtNombre"
        />

    <TextView
        android:id="@+id/txtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        app:layout_constraintTop_toBottomOf="@id/edtNombre"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtDireccion"
        />

    <TextView
        android:id="@+id/txtTfno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        app:layout_constraintTop_toBottomOf="@id/edtDireccion"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edtTfno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtTfno"
        />

    <Button
        android:id="@+id/btGestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_cliente"
        app:layout_constraintTop_toBottomOf="@id/edtTfno"
        android:onClick="crearCli"
        />

</androidx.constraintlayout.widget.ConstraintLayout>