<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btBD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gestionar_base_de_datos"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="gestionarBD"
        />

    <Button
        android:id="@+id/btXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_el_tiempo"
        app:layout_constraintTop_toBottomOf="@id/btBD"
        android:onClick="verTiempo"
        />

    <Button
        android:id="@+id/btSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="cerrarApp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>