<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".CrearFactura">

    <TextView
        android:id="@+id/txtCreando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/cfr"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/txtNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Num:"
        app:layout_constraintTop_toBottomOf="@id/txtCreando"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edtNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtNum"
        />

    <TextView
        android:id="@+id/txtConcepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/concep"
        app:layout_constraintTop_toBottomOf="@id/edtNum"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edtConcepto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtConcepto"
        />

    <TextView
        android:id="@+id/txtValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/val"
        app:layout_constraintTop_toBottomOf="@id/edtConcepto"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/edtValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtValor"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_factura"
        app:layout_constraintTop_toBottomOf="@id/edtValor"
        android:onClick="crearFact"
        />

</androidx.constraintlayout.widget.ConstraintLayout>